# my-little-llm

./: .gitignore  README.md  dataloader.py  nnet.py  pyproject.toml  runner.py  train.py
gpt/: runner.py
