[project]
name = "my-llm"
version = "0.1.0"
description = "A simple LLM training project"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "tiktoken>=0.5.2",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0"
]

[tool.poetry]
name = "my-llm"
version = "0.1.0"
description = "A simple LLM training project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = "^0.5.2"
torch = "^2.0.0" 